# claude-memory

./: .gitignore  AGENTS.md  README.md  config.env.template  install.sh  pyproject.toml
hooks/: pre-compact.py  session-end.py  session-start.py
knowledge/: index.md
scripts/: compile.py  config.py  digest.py  flush.py  lint.py  query.py  sync.py  utils.py
